<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/background_light">

    <android.support.v7.widget.CardView
      android:id="@+id/card"
      style="@style/CardViewStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp">

        <android.support.design.widget.TextInputLayout
          style="@style/EditTextLayout"
          android:id="@+id/etEmailLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorTextAppearance="@style/TextLabel"
          app:hintTextAppearance="@style/TextLabel">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            app:validateEmpty="@{true}"
            app:validateMinLength="@{4}"
            app:validateType='@{"email"}'
            app:validateTypeAutoDismiss="@{true}"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          style="@style/EditTextLayout"
          android:id="@+id/etUsernameLayout"
          android:layout_below="@id/etEmailLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintTextAppearance="@style/TextLabel">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:validateEmpty="@{true}"
            app:validateMinLength="@{4}"
            app:validateType='@{"username"}'
            app:validateTypeAutoDismiss="@{true}"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          style="@style/EditTextLayout"
          android:id="@+id/etPasswordLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/etUsernameLayout"
          app:errorTextAppearance="@style/TextLabel"
          app:hintTextAppearance="@style/TextLabel">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textSize="20sp"
            app:validateEmpty="@{true}"
            app:validateMinLength="@{4}"
            app:validateType='@{"password"}'
            app:validateTypeAutoDismiss="@{true}"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_below="@id/etPasswordLayout"
          android:layout_marginTop="12dp"
          android:layout_alignParentRight="true">

          <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btRegister"
            android:layout_alignBottom="@+id/btRegister"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/btRegister"
            android:text="@string/login"
            android:textColor="@color/accent"
            android:textSize="16sp"
            app:backgroundTint="#FFFF"
            android:layout_toLeftOf="@+id/btRegister"
            android:layout_marginRight="12dp"/>

          <Button
            android:id="@+id/btRegister"
            style="Widget.AppCompat.Button.BorderLess.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/register"
            android:textColor="#FFFF"
            android:textSize="16sp"
            app:backgroundTint="@color/accent"
            android:layout_alignParentRight="true"/>

        </RelativeLayout>

      </RelativeLayout>

    </android.support.v7.widget.CardView>

  </RelativeLayout>

</layout>